<resources>
    <!--    <string name="app_name">SocialAndroidApp</string>-->
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_internet_connection">No internet connection.\nPlease check your network and try again.</string>

    <string name="email_hint">Email</string>
    <string name="email_helper">Please input your email</string>
    <string name="email_required">Email address is required</string>
    <string name="email_invalid">Wrong email address format</string>
    <string name="password_hint">Password</string>
    <string name="password_helper">Please input your password</string>
    <string name="password_required">Password is required</string>
    <string name="password_invalid">Password must have at least 1 lower/upper case letter, 1 digit, 1 special character and longer than 6</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="default_error">Something went wrong with application</string>
    <string name="login_success">Login successfully!</string>
    <string name="error_title">Error</string>
    <string name="btn_ok">OK</string>
    <string name="error_session_expired">Your session has expired. Please log in.</string>

</resources>
